--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,13 +18,15 @@
 
 body {
 	color: rgb(var(--foreground-rgb));
-	background: linear-gradient(
+	/* background: linear-gradient(
 			to bottom,
 			transparent,
 			rgb(var(--background-end-rgb))
 		)
-		rgb(var(--background-start-rgb));
+		rgb(var(--background-start-rgb)); */
+	padding: 1rem
 }
+
 
 @layer utilities {
 	.text-balance {
